# nrs

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: config.rs  error.rs  main.rs  utils.rs
src/commands/: add.rs  current.rs  doctor.rs  edit.rs  list.rs  mod.rs  prune.rs  remove.rs  reset.rs  show.rs  test.rs  use.rs
