[package]
name = "nrs-cli"
version = "0.1.1-beta.2"
edition = "2024"
authors = ["Daniel <cesardaniel.9611@gmail.com>"]
license = "MIT"
description = "A CLI written in Rust to manage multiple Node.js registries easily and efficiently."
repository = "https://github.com/Dantescur/nrs"
homepage = "https://github.com/Dantescur/nrs"
categories = ["command-line-utilities", "development-tools"]
keywords = ["npm", "registry", "cli", "node", "tool"]
readme = "README.md"

[[bin]]
name = "nrs"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
clap_autocomplete = "0.4.2"
colored = "3.0.0"
dirs = "6.0.0"
reqwest = { version = "0.12.20", features = ["blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
